testing header on safari

--- a/css/dev/app.css
+++ b/css/dev/app.css
@@ -345,13 +345,17 @@ body {
 }
 
 [data-fls-header-scroll].--header-scroll {
-  position: sticky;
   top: 0;
   right: 0;
   left: 0;
   z-index: 50;
 }
 .header {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 10;
   background-color: var(--white);
   transition: 0.15s ease;
 }
