--- a/css/dev/app.css
+++ b/css/dev/app.css
@@ -892,7 +892,7 @@ textarea.input {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  margin-right: 0.5rem;
+  margin-right: 0.25rem;
 }
 .tel-input__country {
   flex: 0 0 1.5rem;
@@ -906,6 +906,7 @@ textarea.input {
   height: auto;
   color: var(--textSecondary);
   outline: none;
+  padding-left: 0.5rem;
 }
 .tel-input__input:focus-within {
   outline: none;
